--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,16 @@
 {
+    "functions": {
+        "api/index.js": {
+            "maxDuration": 30
+        }
+    },
     "rewrites": [
         {
-            "source": "/api/(.*)",
+            "source": "/api/:path*",
+            "destination": "/api/index.js"
+        },
+        {
+            "source": "/api",
             "destination": "/api/index.js"
         }
     ]
