--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,33 @@
 {
-    "functions": {
-        "api/index.js": {
-            "maxDuration": 30
-        }
-    },
-    "rewrites": [
+    "version": 2,
+    "builds": [
         {
-            "source": "/api/:path*",
-            "destination": "/api/index.js"
+            "src": "api/index.js",
+            "use": "@vercel/node"
         },
         {
-            "source": "/api",
-            "destination": "/api/index.js"
+            "src": "package.json",
+            "use": "@vercel/static-build",
+            "config": {
+                "distDir": "dist"
+            }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "/api/index.js"
+        },
+        {
+            "src": "/api",
+            "dest": "/api/index.js"
+        },
+        {
+            "handle": "filesystem"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/index.html"
         }
     ]
 }
