--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
     "builds": [
         {
             "src": "api/index.js",
-            "use": "@vercel/node"
+            "use": "@vercel/node",
+            "config": {
+                "maxLambdaSize": "50mb"
+            }
         },
         {
             "src": "package.json",
@@ -13,10 +16,18 @@
             }
         }
     ],
+    "functions": {
+        "api/index.js": {
+            "maxDuration": 60
+        }
+    },
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "/api/index.js"
+            "dest": "/api/index.js",
+            "headers": {
+                "Content-Type": "application/json"
+            }
         },
         {
             "src": "/api",
