--- a/vercel.json
+++ b/vercel.json
@@ -1,44 +1,19 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "api/index.js",
-            "use": "@vercel/node",
-            "config": {
-                "maxLambdaSize": "50mb"
-            }
-        },
-        {
-            "src": "package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "dist"
-            }
-        }
-    ],
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist",
     "functions": {
         "api/index.js": {
             "maxDuration": 60
         }
     },
-    "routes": [
+    "rewrites": [
         {
-            "src": "/api/(.*)",
-            "dest": "/api/index.js",
-            "headers": {
-                "Content-Type": "application/json"
-            }
+            "source": "/api/:path*",
+            "destination": "/api/index.js"
         },
         {
-            "src": "/api",
-            "dest": "/api/index.js"
-        },
-        {
-            "handle": "filesystem"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/index.html"
+            "source": "/((?!api).*)",
+            "destination": "/index.html"
         }
     ]
 }
